recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  carre()
  droite()
  carre()
  droite()
  carre()
  droite()
  carre()
  
}

def carre() {
  baisseCrayon()
  avance(100)
  droite()
  avance(100)
  droite()
  avance(100)
  droite()
  avance()
  droite()
  leveCrayon
}